<resources>
	<string name="app_name">Dozenal Calculator</string>
	<string name="number0">0</string>
	<string name="number1">1</string>
	<string name="number2">2</string>
	<string name="number3">3</string>
	<string name="number4">4</string>
	<string name="number5">5</string>
	<string name="number6">6</string>
	<string name="number7">7</string>
	<string name="number8">8</string>
	<string name="number9">9</string>
	<string name="numberDec">↊</string>
	<string name="numberEl">↋</string>
	<string name="operationDivide">÷</string>
	<string name="operationMultiply">×</string>
	<string name="operationSubtract">−</string>
	<string name="operationAdd">+</string>
	<string name="operationResult">=</string>
	<string name="decimalSeparator">,</string>
	<string name="backspace">⌫</string>
</resources>