<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TableLayout
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:stretchColumns="1"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		style="?android:attr/buttonBarStyle">

		<TableRow >

			<TextView
				android:id="@+id/displayTextView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_span="4"
				android:fontFamily="@font/cascadia_mono_regular"
				android:textSize="48sp"
				tools:text="123.456.789,↊↋" />

		</TableRow>

		<TableRow>

			<Button
				android:id="@+id/numberDecButton"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/numberDec"
				android:textSize="24sp" />

			<Button
				android:id="@+id/numberElButton"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/numberEl"
				android:textSize="24sp" />

			<Button
				android:id="@+id/backspaceButton"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/backspace"
				android:textSize="24sp" />

			<Button
				android:id="@+id/divideButton"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/operationDivide"
				android:textSize="24sp" />

		</TableRow>

		<TableRow>

			<Button
				android:id="@+id/number7Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number7"
				android:textSize="24sp" />

			<Button
				android:id="@+id/number8Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number8"
				android:textSize="24sp" />

			<Button
				android:id="@+id/number9Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number9"
				android:textSize="24sp" />

			<Button
				android:id="@+id/multiplyButton"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/operationMultiply"
				android:textSize="24sp" />

		</TableRow>

		<TableRow>

			<Button
				android:id="@+id/number4Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number4"
				android:textSize="24sp" />

			<Button
				android:id="@+id/number5Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number5"
				android:textSize="24sp" />

			<Button
				android:id="@+id/number6Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number6"
				android:textSize="24sp" />

			<Button
				android:id="@+id/subtractButton"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/operationSubtract"
				android:textSize="24sp" />

		</TableRow>

		<TableRow>

			<Button
				android:id="@+id/number1Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number1"
				android:textSize="24sp" />

			<Button
				android:id="@+id/number2Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number2"
				android:textSize="24sp" />

			<Button
				android:id="@+id/number3Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number3"
				android:textSize="24sp" />

			<Button
				android:id="@+id/addButton"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/operationAdd"
				android:textSize="24sp" />

		</TableRow>

		<TableRow>

			<Button
				android:id="@+id/number0Button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/number0"
				android:textSize="24sp" />

			<Button
				android:id="@+id/decimalButton"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/decimalSeparator"
				android:textSize="24sp" />

			<Button
				android:id="@+id/equalButoon"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:fontFamily="@font/cascadia_mono_regular"
				android:text="@string/operationResult"
				android:textSize="24sp" />

		</TableRow>

	</TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>